--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ h1 {
   background: url("./assets/clear.jpeg") no-repeat center center/cover;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   z-index: -1;
@@ -88,7 +88,7 @@ h1 {
   padding: 0.7rem 1.5rem;
   font-size: 1.2rem;
   border-radius: 25px;
-  width: auto;
+  width: 600px;
   border: 1px solid rgba(255, 255, 255, 0.8);
   background: rgba(255, 255, 255, 0.1);
   color: white;
@@ -101,4 +101,17 @@ h1 {
 .WeatherApp .search .btn {
   padding: 0.7rem 1.5rem;
   border-radius: 25px;
+  background-color: black;
+  color: white;
+  font-size: large;
+  font-family: verdana;
+  font-weight: 500;
+}
+
+.errormessage {
+  color: red;
+  text-transform: uppercase;
+  font-weight: 800;
+  padding: 1rem;
+  position: relative;
 }
